# Tokenized-Fractional-

./: .gitignore  CONTRIBUTING.md  PR_DESCRIPTION_ISSUE_80.md  PR_DESCRIPTION_ISSUE_93.md  README.md  SECURITY.md  render.yaml
.github/workflows/: deploy.yml  pr.yml
backend/: .dockerignore  .env.example  Dockerfile  PR_DESCRIPTION_ISSUE_17.md  PR_DESCRIPTION_ISSUE_18.md  cache.js  index.js  package-lock.json  package.json
backend/__tests__/: api.test.js  cache.test.js
contracts/: Cargo.toml
contracts/proptest-regressions/: lib.txt
contracts/src/: lib.rs
frontend/: .env.example  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/.storybook/: main.js  preview.js
frontend/e2e/: marketplace.spec.js
frontend/src/: App.jsx  App.module.css  i18n.js  main.jsx
frontend/src/components/AdminAuth/: AdminAuth.jsx  AdminAuth.module.css
frontend/src/components/AdminPage/: AdminPage.jsx  AdminPage.module.css
frontend/src/components/Alert/: Alert.stories.jsx
frontend/src/components/AssetCard/: AssetCard.jsx  AssetCard.module.css
frontend/src/components/AssetForm/: AssetForm.jsx  AssetForm.module.css
frontend/src/components/AssetGrid/: AssetGrid.jsx  AssetGrid.module.css
frontend/src/components/Badge/: Badge.stories.jsx
frontend/src/components/Button/: Button.jsx  (+2 more)
frontend/src/context/: ThemeContext.jsx
frontend/src/hooks/: useSoroban.js  useTransactionStatus.js
frontend/src/locales/: en.json  es.json
frontend/src/store/: useAssetStore.js  useWalletStore.js
frontend/src/styles/: theme.css
nginx/: nginx.conf
(+37 files in other folders)
