[package]
name = "rwa-marketplace"
version = "0.2.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "26.1.0"

[profile.release]
opt-level = "z"
lto = true
debug = false

[dev-dependencies]
soroban-sdk = { version = "26.1.0", features = ["testutils"] }
proptest = "1.4"
